# Copyright (c) 2018 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
    _yyy_angle_path = "."
angle_end2end_tests_sources =
[
    "$_yyy_angle_path/src/tests/gl_tests/AtomicCounterBufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/AttributeLayoutTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/BindGeneratesResourceTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/BindUniformLocationTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/BlendMinMaxTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/BlitFramebufferANGLETest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/BufferDataTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/BuiltinVariableTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ClearTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ClientArraysTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ColorMaskTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ComputeShaderTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/CopyCompressedTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/CopyTexImageTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/CopyTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/CubeMapTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DebugMarkerTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DebugTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DepthStencilFormatsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DiscardFramebufferEXTTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DrawBuffersTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DrawElementsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DXT1CompressedTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/DXTSRGBCompressedTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ETCTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ExplicitContextTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/FenceSyncTests.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/FloatingPointSurfaceTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/FramebufferMixedSamplesTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/FramebufferMultiviewTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/FramebufferRenderMipmapTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/FramebufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/GeometryShaderTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/AlphaFuncTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/BasicDrawTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/ClientActiveTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/ClientStateEnable.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/ClipPlaneTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/CurrentColorTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/CurrentNormalTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/CurrentTextureCoordsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/DrawTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/FogTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/MaterialsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/MatrixBuiltinsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/MatrixLoadTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/MatrixModeTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/MatrixMultTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/MatrixStackTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/LightsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/PointParameterTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/ShadeModelTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/TextureEnvTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/TextureParameterTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/TextureTargetEnableTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/gles1/VertexPointerTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/GLSLTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ImageTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/IncompleteTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/IndexBufferOffsetTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/IndexedPointsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/InstancingTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/LineLoopTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/LinkAndRelinkTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/MaxTextureSizeTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/MipmapTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/MultisampleCompatibilityTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/MultithreadingTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/MultiviewDrawTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/media/pixel.inl",
    "$_yyy_angle_path/src/tests/gl_tests/PackUnpackTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/PathRenderingTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/PbufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/PBOExtensionTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/PointSpritesTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ProvokingVertexTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ObjectAllocationTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/OcclusionQueriesTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ParallelShaderCompileTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ProgramBinaryTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ProgramInterfaceTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ProgramParameterTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ProgramPipelineTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ReadPixelsTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/RenderbufferMultisampleTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/RendererTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/RequestExtensionTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/RobustBufferAccessBehaviorTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/RobustClientMemoryTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/RobustResourceInitTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SamplersTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ShaderStorageBufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SimpleOperationTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SixteenBppTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SRGBFramebufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SRGBTextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/StateChangeTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SwizzleTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/SyncQueriesTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/TextureMultisampleTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/TextureRectangleTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/TextureTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/TextureUploadFormatTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/TimerQueriesTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/TransformFeedbackTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/UniformBufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/UniformTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/UnpackAlignmentTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/UnpackRowLength.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/VertexAttributeTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/ViewportTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/WebGLCompatibilityTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/WebGLFramebufferTest.cpp",
    "$_yyy_angle_path/src/tests/gl_tests/WebGLReadOutsideFramebufferTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLContextCompatibilityTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLContextSharingTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLDebugTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLProgramCacheControlTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLQueryContextTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLRobustnessTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLSanityCheckTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLSurfacelessContextTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLSurfaceTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLThreadTest.cpp",
    "$_yyy_angle_path/src/tests/test_utils/ANGLETest.cpp",
    "$_yyy_angle_path/src/tests/test_utils/ANGLETest.h",
    "$_yyy_angle_path/src/tests/test_utils/MultiviewTest.cpp",
    "$_yyy_angle_path/src/tests/test_utils/MultiviewTest.h",
    "$_yyy_angle_path/src/tests/test_utils/angle_test_configs.cpp",
    "$_yyy_angle_path/src/tests/test_utils/angle_test_configs.h",
    "$_yyy_angle_path/src/tests/test_utils/angle_test_instantiate.cpp",
    "$_yyy_angle_path/src/tests/test_utils/angle_test_instantiate.h",
    "$_yyy_angle_path/src/tests/test_utils/gl_raii.h",
]
angle_end2end_tests_mac_sources =
[
    "$_yyy_angle_path/src/tests/egl_tests/EGLIOSurfaceClientBufferTest.cpp",
]
angle_end2end_tests_win_sources =
[
    "$_yyy_angle_path/src/tests/gl_tests/D3DImageFormatConversionTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLDeviceTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLPresentPathD3D11Test.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLStreamTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/EGLSyncControlTest.cpp",
    "$_yyy_angle_path/src/tests/egl_tests/media/yuvtest.inl",
]
angle_end2end_tests_x11_sources =
[
    "$_yyy_angle_path/src/tests/egl_tests/EGLX11VisualTest.cpp",
]
}
